Use URI instead of URL, since URI handles encoding/decodingg of international characters
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@4017 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4